--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Financial Plot</title>
+    <title>Rollin' - Limp Bizkit</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
@@ -12,9 +12,9 @@
     <form class="form-inline">
       <div class="form-group">
         <label for="stockInput">Stock</label>
-        <input type="text" class="form-control" id="stockInput" placeholder="Enter a stock">
+        <input type="text" class="form-control" id="stockInput" placeholder="Enter a stock symbol">
       </div>
-      <button id="submit" type="submit" class="btn btn-default">Plot Stock</button>
+      <button id="submit" type="submit" class="btn btn-default">Plot 5-day rolling average</button>
     </form>
     <div id="plot"></div>
     <script src="plots.js"></script>
